--- a/lib/ptr_web/templates/layout/_flash.html.eex
+++ b/lib/ptr_web/templates/layout/_flash.html.eex
@@ -1,7 +1,7 @@
-<section class="section flash-message">
+<section class="section flash-message" data-controller="flash" data-target="flash.message">
   <div class="container">
     <p class="notification <%= flash_class(@type) %>">
-      <button class="delete" data-delete=".flash-message"></button>
+      <button class="delete is-hidden" data-action="click->flash#close" data-target="flash.close"></button>
       <%= @message %>
     </p>
   </div>
