--- a/lib/ptr_web/templates/owner/index.html.eex
+++ b/lib/ptr_web/templates/owner/index.html.eex
@@ -19,7 +19,7 @@
           </thead>
           <tbody>
             <%= for owner <- @owners do %>
-              <tr class="has-cursor-pointer" data-link-like data-target="[data-main-link]">
+              <tr data-controller="link" data-action="click->link#open" data-target="link.action">
                 <td><%= owner.name %></td>
                 <td><%= owner.tax_id %></td>
 
@@ -35,7 +35,7 @@
           </tbody>
         </table>
 
-        <%= pagination_links @conn, @page, view_style: :bulma %>
+        <%= pagination_links @conn, @page %>
       </div>
     </div>
   </div>
