--- a/lib/ptr_web/templates/email/password_reset.html.eex
+++ b/lib/ptr_web/templates/email/password_reset.html.eex
@@ -4,7 +4,7 @@
 <p><%= dgettext("emails", "Follow this link to reset your password") %>:</p>
 
 <p>
-  <%= link dgettext("emails", "Reset password"), to: password_url(PtrWeb.Endpoint, :edit, @user.password_reset_token) %>
+  <%= link dgettext("emails", "Reset password"), to: Routes.password_url(PtrWeb.Endpoint, :edit, @user.password_reset_token) %>
 </p>
 
 <p><%= dgettext("emails", "If you didn't ask for this you can safely disregard this message") %></p>
