--- a/lib/ptr_web/templates/email/password_reset.text.eex
+++ b/lib/ptr_web/templates/email/password_reset.text.eex
@@ -3,7 +3,7 @@
 <%= dgettext("emails", "Someone requested a password reset for your user account") %>
 <%= dgettext("emails", "Go to this address to reset your password") %>:
 
-<%= password_url(PtrWeb.Endpoint, :edit, @user.password_reset_token) %>
+<%= Routes.password_url(PtrWeb.Endpoint, :edit, @user.password_reset_token) %>
 
 
 --------------------------------------------------------------------------------
