--- a/lib/ptr_web/templates/variety/index.html.eex
+++ b/lib/ptr_web/templates/variety/index.html.eex
@@ -46,7 +46,7 @@
 <footer class="footer is-primary">
   <div class="container">
     <p>
-      <span><%= link dgettext("varieties", "New variety"), to: variety_path(@conn, :new) %></span>
+      <span><%= link dgettext("varieties", "New variety"), to: Routes.variety_path(@conn, :new) %></span>
     </p>
   </div>
 </footer>
