--- a/priv/templates/ptr.gen.html/new.html.eex
+++ b/priv/templates/ptr.gen.html/new.html.eex
@@ -9,7 +9,7 @@
             </h2>
           </header>
 
-          <%%= render "_form.html", Map.put(assigns, :action, <%= schema.route_helper %>_path(@conn, :create)) %>
+          <%%= render "_form.html", Map.put(assigns, :action, Routes.<%= schema.route_helper %>_path(@conn, :create)) %>
         </div>
       </div>
     </div>
@@ -19,7 +19,7 @@
 <footer class="footer is-primary">
   <div class="container">
     <p>
-      <span><%%= link dgettext("<%= schema.plural %>", "Back"), to: <%= schema.route_helper %>_path(@conn, :index) %></span>
+      <span><%%= link dgettext("<%= schema.plural %>", "Back"), to: Routes.<%= schema.route_helper %>_path(@conn, :index) %></span>
     </p>
   </div>
 </footer>
