--- a/lib/ptr_web/templates/cellar/_vessels.html.eex
+++ b/lib/ptr_web/templates/cellar/_vessels.html.eex
@@ -3,7 +3,7 @@
 </h4>
 
 <p>
-  <%= link dgettext("cellars", "New vessel"), to: cellar_vessel_path(@conn, :new, @cellar), class: "button is-small" %>
+  <%= link dgettext("cellars", "New vessel"), to: Routes.cellar_vessel_path(@conn, :new, @cellar), class: "button is-small" %>
   <%= gettext("or") %>
-  <%= link dngettext("cellars", "Show vessel", "Show %{count} vessels", @cellar.vessels_count), to: cellar_vessel_path(@conn, :index, @cellar) %>
+  <%= link dngettext("cellars", "Show vessel", "Show %{count} vessels", @cellar.vessels_count), to: Routes.cellar_vessel_path(@conn, :index, @cellar) %>
 </p>
