--- a/lib/ptr_web/templates/lot/_parts.html.eex
+++ b/lib/ptr_web/templates/lot/_parts.html.eex
@@ -3,7 +3,7 @@
 </h4>
 
 <p>
-  <%= link dgettext("lots", "New part"), to: lot_part_path(@conn, :new, @lot), class: "button is-small" %>
+  <%= link dgettext("lots", "New part"), to: Routes.lot_part_path(@conn, :new, @lot), class: "button is-small" %>
   <%= gettext("or") %>
-  <%= link dngettext("lots", "Show part", "Show %{count} parts", @lot.parts_count), to: lot_part_path(@conn, :index, @lot) %>
+  <%= link dngettext("lots", "Show part", "Show %{count} parts", @lot.parts_count), to: Routes.lot_part_path(@conn, :index, @lot) %>
 </p>
