--- a/lib/ptr_web/templates/owner/show.html.eex
+++ b/lib/ptr_web/templates/owner/show.html.eex
@@ -19,7 +19,7 @@
       </div>
 
       <footer class="card-footer">
-        <%= link dgettext("owners", "Edit"), to: owner_path(@conn, :edit, @owner), class: "card-footer-item" %>
+        <%= link dgettext("owners", "Edit"), to: Routes.owner_path(@conn, :edit, @owner), class: "card-footer-item" %>
       </footer>
     </div>
   </div>
@@ -28,7 +28,7 @@
 <footer class="footer is-primary">
   <div class="container">
     <p>
-      <span><%= link dgettext("owners", "Back"), to: owner_path(@conn, :index) %></span>
+      <span><%= link dgettext("owners", "Back"), to: Routes.owner_path(@conn, :index) %></span>
     </p>
   </div>
 </footer>
