--- a/lib/ptr_web/templates/session/new.html.eex
+++ b/lib/ptr_web/templates/session/new.html.eex
@@ -10,7 +10,7 @@
               <%= dgettext("sessions", "Log In") %>
             </h2>
 
-            <%= form_for @conn, session_path(@conn, :create), [as: :session], fn f -> %>
+            <%= form_for @conn, Routes.session_path(@conn, :create), [as: :session], fn f -> %>
               <%= input f, :email, dgettext("sessions", "Email"),
                 input_html: email_input_html(),
                 icons:      [left: "envelope"],
@@ -30,7 +30,7 @@
           </div>
 
           <p>
-            <%= link dgettext("sessions", "Forgot password?"), to: password_path(@conn, :new) %>
+            <%= link dgettext("sessions", "Forgot password?"), to: Routes.password_path(@conn, :new) %>
           </p>
         </div>
       </div>
