--- a/lib/ptr_web/templates/variety/new.html.eex
+++ b/lib/ptr_web/templates/variety/new.html.eex
@@ -9,7 +9,7 @@
             </h2>
           </header>
 
-          <%= render "_form.html", Map.put(assigns, :action, variety_path(@conn, :create)) %>
+          <%= render "_form.html", Map.put(assigns, :action, Routes.variety_path(@conn, :create)) %>
         </div>
       </div>
     </div>
@@ -19,7 +19,7 @@
 <footer class="footer is-primary">
   <div class="container">
     <p>
-      <span><%= link dgettext("varieties", "Back"), to: variety_path(@conn, :index) %></span>
+      <span><%= link dgettext("varieties", "Back"), to: Routes.variety_path(@conn, :index) %></span>
     </p>
   </div>
 </footer>
