--- a/lib/ptr_web/templates/variety/show.html.eex
+++ b/lib/ptr_web/templates/variety/show.html.eex
@@ -23,7 +23,7 @@
       </div>
 
       <footer class="card-footer">
-        <%= link dgettext("varieties", "Edit"), to: variety_path(@conn, :edit, @variety), class: "card-footer-item" %>
+        <%= link dgettext("varieties", "Edit"), to: Routes.variety_path(@conn, :edit, @variety), class: "card-footer-item" %>
       </footer>
     </div>
   </div>
@@ -32,7 +32,7 @@
 <footer class="footer is-primary">
   <div class="container">
     <p>
-      <span><%= link dgettext("varieties", "Back"), to: variety_path(@conn, :index) %></span>
+      <span><%= link dgettext("varieties", "Back"), to: Routes.variety_path(@conn, :index) %></span>
     </p>
   </div>
 </footer>
