--- a/lib/ptr_web/templates/vessel/vessel.html.eex
+++ b/lib/ptr_web/templates/vessel/vessel.html.eex
@@ -2,7 +2,7 @@
   <td><%= @vessel.identifier %></td>
   <td><%= Decimal.round(@vessel.capacity) %></td>
   <td class="is-hidden-mobile has-text-centered-vertically"><%= progress(@vessel, class: "progress is-small") %></td>
-  <td class="is-hidden-touch"><%= Gettext.dgettext(PtrWeb.Gettext, "vessels", @vessel.material || "") %></td>
+  <td class="is-hidden-touch"><%= @vessel.material && @vessel.material.name %></td>
   <td class="is-hidden-touch"><%= Gettext.dgettext(PtrWeb.Gettext, "vessels", @vessel.cooling || "") %></td>
 
   <td>
